Login Try First Attempt . Work in Progress .Seems Little Hard as well as interesting

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,6 @@
   </head>
 
   <body>
-    <my-app>Loading AppComponent content here ...</my-app>
+    <angular2-app>Loading AppComponent content here ...</angular2-app>
   </body>
 </html>
